Wed Aug 20 13:21:11 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): Adjust stack narrowing.
	(whitespace-chars): Include #\np.

	* syncase.scm: Also turn off debugging evaluator and recording of
	procedure names during loading of psyntax.pp.

	* psyntax.pp: Removed leading blanks => 800K -> 100K.

Tue Aug 19 02:39:41 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* syncase.scm: Don't tamper with debug mode setting when enabling
	macros.  Instead cut the stack with start-stack.
	Load psyntax.pp with recording of positions turned off.

	* psyntax.pp, psyntax.ss (quasiquote): Changed fx= --> =.

*	* syncase.scm: New file: Guile-adaption for syntax-case macros.
  	psyntax.pp, psyntax.ss: Syntax-case macros, portable version 2 by
 	R. Kent Dybvig, Oscar Waddell, Bob Hieb and Carl Bruggeman

Mon Aug 18 21:58:25 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* session.scm: New file: Session support.
	(apropos): New procedure: List bindings given regexp.

Sat Aug 16 18:44:24 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: define tms accessors: clock, utime, stime, cutime,
	cstime.

Thu Aug 14 19:55:37 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): Something has changed in the reader so
	that we now should set the port line count to the specified value
	(linum) instead of (- linum 1).

	* slib.scm (slib:load): Use load-from-path instead of
 	primitive-load-path so that backtraces get narrowed properly at
 	the top.

	* boot-9.scm (top-repl): Save stack already in signal handler in
	order to narrow it correctly.
	(save-stack): Adjust narrowing tag for the top of load-stacks.

Tue Jul 29 01:18:08 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (move->fdes, dup->port): use dup->fdes, not primitive-dup.
	(dup->fdes): deleted, now done in C.

Sat Jul 26 08:00:42 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (setenv): new procedure, scsh compatible.
